--- a/Übung 06/Blatt-06_Tutorium-04_Gruppe-151.tex
+++ b/Übung 06/Blatt-06_Tutorium-04_Gruppe-151.tex
@@ -145,7 +145,7 @@
 			Input: $\langle o_1,...,o_m \rangle$
 			i = 1
 			I = $\langle \rangle$
-			while(i < m)
+			while(i $\leq$ m)
 				if($k_{o_i}$ oben und unten verschieden lang)
 					I += index($k_{o_i}$)
 				else
