--- a/Übung 09/Blatt-09_Tutorium-04_Gruppe-151.tex
+++ b/Übung 09/Blatt-09_Tutorium-04_Gruppe-151.tex
@@ -78,7 +78,7 @@
 \usepackage{listings}  
 \lstset{columns=fullflexible,
         mathescape=true,
-        morekeywords={if,else,return,while,do,break,Input},
+        morekeywords={if,else,return,while,do,break,def,Input},
         numbers=left,
     	stepnumber=1,
    		showstringspaces=false,
@@ -102,51 +102,49 @@
 	\begin{lstlisting}
 	Input G=(V,E)	
 	
-	$v_{start}$ $\coloneqq$ getFirst(V)
-	K $\coloneqq$ $\{v_{start}\}$
-	E' $\coloneqq$ E
-	weights $\coloneqq$ sumAllWeights(E')
-	tourWeights $\coloneqq$ 0
-	
-	while !SetEquals(K,V):
-		u $\coloneqq$ getLast(K)
-		E'' $\coloneqq$ E'
-		
+	// Get optimal tour cost
+	def getTourCostOpt(G=(V,E)):
+		n = size(V)
+		E = sort(E)
+		E' = getLast(E,n) // Returns Set with last n elements in E
+		opt = sumWeights(E')
 		while true:
-			if(E'' = $\emptyset$):
-				return $\emptyset$ //Error
-			
-			
-			weights' $\coloneqq$ weights
-			tourWeights' $\coloneqq$ tourWeights
-			E''' $\coloneqq$ E'
-			
-			v $\coloneqq$ getMinCostFrom(E'', u)
-			cost $\coloneqq$ getCost(E'', (u,v))
-			weights' -= cost
-			tourWeights' += cost
-			
-			forall(k in K && k $\neq$ $v_{start}$):
-				E''' = removeIfExists(E''', (k,v))
-			
-			if((*\ComplexityFont{TSP-E}*) ((V',E'''), (tourWeights' + getCost(E'',(v,$v_start$))))
-				return add(K,v)
-			else if((*\ComplexityFont{TSP-E}*) ((V',E'''),weights))
-				K = add(K,v)
-				E' = E'''
-				weights = weights'
-				tourWeights = tourWeights'
+			b = opt - 1
+			if (*\ComplexityFont{TSP-E}*)(G,b)):
+				opt = b
+			else:
 				break
-			else
-				E'' = remove(E'', (u,v))
+		return opt
+	
+	// Calc Graph, which only contains the tour
+	opt = getTourCostOpt(G)
+	for $e \in E$:
+		G' = (V, remove(E,e))
+		if opt == getTourCostOpt(G'):
+			G = G'
+	
+	// Calulate the path
+	$v_{start}$ = getFirst(V)
+	K = $\{v_{start}\}$
+	while true:
+		u = getNeighbourOf(getLast(K), K) // sets u to the neighbour of the last element in K, which is not in K
+		K = add(K, u) // add u to K
 	
 	
 	return K
-			
 	\end{lstlisting}
 	
-TODO: Korrektheit + Laufzeit	
+	Laufzeit:\\
+	Die Methode \verb|getTourCostOpt(G)| ist offensichtlich in polynomieller Zeit berechenbar. Das sortieren von E geht in quadratischer Zeit, das Lesen der letzten $n$ Elemente in linearer Zeit, genauso das Aufsummieren der Kosten von den Kanten ein \verb|E'|. Die Schleife in dieser Methode wird auch nur höchstens \verb|opt| mal ausgeführt (abhängig von den Kantengewichten), da wir \verb|opt| mit jedem Schleifendurchlauf dekrementieren. \ComplexityFont{TSP-E}\verb|(G,b)| können wir ja auch in polynomieller Zeit berechnen.\\
+	Die Schleife im 2. Teil des Algorithmus wird für jede Kante in \verb|E| ausgeführt. Also kann es nur maximal $n \cdot n$ Schleifendurchläufe geben. Offensichtlich ist auch jeder Schleifendurchlauf in polynomieller Zeit berechenbar.\\
+	Die Schleife im 3. Teil des Algorithmus wird genau $n$ mal ausgeführt, da wir im Prinzip über jeden Knoten in \verb|V| iterieren.\\
+	Damit ist der gesamte Algorithmus in polynomieller Zeit berechenbar.\\
 	
+	Korrektheit:\\
+	Die Methode bestimmt für einen übergebenen Graphen \verb|G| die Optimale Tour Kosten des \ComplexityFont{TSP}. Da jede Tour in \verb|G| genau $n$ viele Knoten besitzt, läuft diese Tour dann auch über genau $n$ vielen Kanten aus \verb|E|. Da die Tour also höchstens über die $n$ schwersten Kanten laufen kann, setzen wir unsere optimale Kosten auf die Summe der Kosten dieser Kanten. Nun überprüfen wir, ob es auch Touren gibt mit geringeren Gesamtkosten. Dazu könnten wir natürlich jede mögliche $n$-Kombination an Kanten überprüfen, doch es ist viel simpler, unsere bisherigen optimalen Kosten zu verringern (möglich, da alle Kosten in $\mathbb{N}$ liegen. So können wir schrittweise die Optimalen Tourkosten von \verb|G| bestimmen.\\
+	In dem 2. Teil des Algorithmus bestimmen wir mithilfe der obigen Methode die optimalen Kosten von einer Tour in \verb|G|. Anschließend überprüfen wir für jede Kante in \verb|E|, ob diese für die Optimale Tour relevant ist. Falls nicht, so löschen wir diese. Mit diesem Teil minimieren wir also den Graphen \verb|G|, sodass dieser nur noch die Kanten der optimalen Tour enthält.\\
+	Im letzten Teil müssen wir noch eine Reihenfolge der Knoten finden, in der die optimale Tour laufen kann. Dazu bestimmen wir uns einen Startknoten $v_{start}$, und gehen dann die Kanten der Knoten nacheinander entlang.\\
+	Also können wir mithilfe von \ComplexityFont{TSP-E} auch \ComplexityFont{TSP} bestimmen.
 	\section*{Aufgabe 5}
 	Hierzu nehmen wir uns eine Formel $\phi$ in 3-KNF mit den Klauseln $k_i$.
 	Jedes $k_i$ in $\phi$ ist daher der Form $(x_i \lor y_i \lor z_i)$. Nun teilen wir jedes $k_i$ in zwei weitere Klauseln $k_i'$ und $k_i''$, wobei wir auch noch für jede Klausel eine Variable $c_i$, und für alle Klauseln die Variable $f = 0$ einführen.\\
